[gd_scene load_steps=12 format=3 uid="uid://k5kkelg5mwq7"]

[ext_resource type="Script" path="res://level.gd" id="1_mprg5"]
[ext_resource type="Texture2D" uid="uid://chjjltsvfcc7o" path="res://bg3.png" id="2_smim8"]
[ext_resource type="Script" path="res://easy.gd" id="3_5tflv"]
[ext_resource type="Script" path="res://background_movement.gd" id="5_jj8tq"]
[ext_resource type="AudioStream" uid="uid://dcsn4eeflaw2u" path="res://space-trip-114102.mp3" id="6_mtjcv"]
[ext_resource type="Texture2D" uid="uid://duuegv3pwuyi6" path="res://easy/next_button.png" id="7_7y18q"]
[ext_resource type="Texture2D" uid="uid://bhx3lpofbjqsb" path="res://easy/spaceman_easy_picture-removebg-preview.png" id="7_v5mo8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1dbl"]
bg_color = Color(0.137255, 0.145098, 0.0470588, 0.419608)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.439216, 0.207843, 0.145098, 0.6)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aesjv"]
bg_color = Color(0.305882, 0.227451, 0.0470588, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 15
shadow_color = Color(0.619608, 0.619608, 0.619608, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3egos"]
bg_color = Color(0.435294, 0.678431, 0.282353, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 15
shadow_color = Color(0.678431, 0.678431, 0.678431, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6o6s7"]
bg_color = Color(0.619608, 0.419608, 0.713726, 0.152941)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mprg5")

[node name="Frame" type="MarginContainer" parent="."]
offset_right = 1153.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="Frame"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Frame/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_smim8")

[node name="Frame2" type="MarginContainer" parent="."]
offset_top = 290.0
offset_right = 1153.0
offset_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="Frame2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Frame2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_smim8")
stretch_mode = 6
flip_h = true

[node name="easy" type="MarginContainer" parent="."]
offset_left = 277.0
offset_top = 462.0
offset_right = 820.0
offset_bottom = 533.0

[node name="VBoxContainer" type="VBoxContainer" parent="easy"]
layout_mode = 2

[node name="easy" type="Button" parent="easy/VBoxContainer"]
layout_mode = 2
tooltip_text = "Play"
theme_override_colors/font_color = Color(0.792157, 0.898039, 0.898039, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_j1dbl")
theme_override_styles/hover = SubResource("StyleBoxFlat_aesjv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3egos")
text = "Easy"
script = ExtResource("3_5tflv")

[node name="Back" type="MarginContainer" parent="."]
offset_left = 870.0
offset_top = 551.0
offset_right = 1050.0
offset_bottom = 626.0

[node name="VBoxContainer" type="VBoxContainer" parent="Back"]
layout_mode = 2

[node name="back" type="Button" parent="Back/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6o6s7")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mtjcv")
autoplay = true

[node name="spaceman_easy" type="Sprite2D" parent="."]
position = Vector2(553, 250)
scale = Vector2(1.67526, 1.61969)
texture = ExtResource("7_v5mo8")
script = ExtResource("5_jj8tq")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="next" type="MarginContainer" parent="."]
offset_left = 883.0
offset_top = 211.0
offset_right = 1067.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="next"]
layout_mode = 2

[node name="next_medium" type="Button" parent="next/VBoxContainer"]
layout_mode = 2
tooltip_text = "Play"
theme_override_colors/font_color = Color(0.792157, 0.898039, 0.898039, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_j1dbl")
theme_override_styles/hover = SubResource("StyleBoxFlat_aesjv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3egos")
icon = ExtResource("7_7y18q")
script = ExtResource("3_5tflv")

[connection signal="mouse_entered" from="easy/VBoxContainer/easy" to="easy/VBoxContainer/easy" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="easy/VBoxContainer/easy" to="easy/VBoxContainer/easy" method="_on_mouse_exited" flags=18]
[connection signal="pressed" from="easy/VBoxContainer/easy" to="." method="_on_easy_pressed" flags=18]
[connection signal="pressed" from="Back/VBoxContainer/back" to="." method="_on_back_pressed" flags=18]
[connection signal="mouse_entered" from="next/VBoxContainer/next_medium" to="next/VBoxContainer/next_medium" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="next/VBoxContainer/next_medium" to="next/VBoxContainer/next_medium" method="_on_mouse_exited" flags=18]
[connection signal="pressed" from="next/VBoxContainer/next_medium" to="." method="_on_next_medium_pressed"]
