[gd_scene load_steps=16 format=3 uid="uid://b3fksu8l4oh2i"]

[ext_resource type="Script" path="res://level.gd" id="1_61ylp"]
[ext_resource type="Texture2D" uid="uid://chjjltsvfcc7o" path="res://bg3.png" id="2_6ots4"]
[ext_resource type="Script" path="res://easy.gd" id="3_0iiyo"]
[ext_resource type="Texture2D" uid="uid://5efcnwtw4gyh" path="res://medium/spaceman_medium.png" id="4_klwdj"]
[ext_resource type="AudioStream" uid="uid://dcsn4eeflaw2u" path="res://space-trip-114102.mp3" id="4_oygfg"]
[ext_resource type="Script" path="res://background_movement.gd" id="6_snb50"]
[ext_resource type="Texture2D" uid="uid://duuegv3pwuyi6" path="res://easy/next_button.png" id="7_yu6j3"]
[ext_resource type="Texture2D" uid="uid://dgk0f83s06b63" path="res://medium/backbutton.png" id="8_kum6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6o6s7"]
bg_color = Color(0.619608, 0.419608, 0.713726, 0.152941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6a787"]
bg_color = Color(0.137255, 0.145098, 0.0470588, 0.419608)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.439216, 0.207843, 0.145098, 0.6)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhq80"]
bg_color = Color(0.305882, 0.227451, 0.0470588, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 15
shadow_color = Color(0.619608, 0.619608, 0.619608, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2ukm"]
bg_color = Color(0.435294, 0.678431, 0.282353, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 15
shadow_color = Color(0.678431, 0.678431, 0.678431, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67660"]
bg_color = Color(0.137255, 0.145098, 0.0470588, 0.419608)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.439216, 0.207843, 0.145098, 0.6)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jd82w"]
bg_color = Color(0.305882, 0.227451, 0.0470588, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 15
shadow_color = Color(0.619608, 0.619608, 0.619608, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgfd8"]
bg_color = Color(0.435294, 0.678431, 0.282353, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 15
shadow_color = Color(0.678431, 0.678431, 0.678431, 0.6)
shadow_size = 5

[node name="Node2D" type="Node2D"]
script = ExtResource("1_61ylp")

[node name="Frame" type="MarginContainer" parent="."]
offset_right = 1153.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="Frame"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Frame/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_6ots4")

[node name="Frame2" type="MarginContainer" parent="."]
offset_top = 290.0
offset_right = 1153.0
offset_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="Frame2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Frame2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_6ots4")
stretch_mode = 6
flip_h = true

[node name="Back" type="MarginContainer" parent="."]
offset_left = 870.0
offset_top = 551.0
offset_right = 1050.0
offset_bottom = 626.0

[node name="VBoxContainer" type="VBoxContainer" parent="Back"]
layout_mode = 2

[node name="back" type="Button" parent="Back/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6o6s7")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oygfg")
autoplay = true

[node name="spaceman_easy" type="Sprite2D" parent="."]
position = Vector2(553, 250)
scale = Vector2(1.67526, 1.61969)
texture = ExtResource("4_klwdj")
script = ExtResource("6_snb50")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 278.0
offset_top = 483.0
offset_right = 818.0
offset_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="medium" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Play"
theme_override_colors/font_color = Color(0.513726, 0.384314, 0.247059, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_6a787")
theme_override_styles/hover = SubResource("StyleBoxFlat_yhq80")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r2ukm")
text = "Medium"
script = ExtResource("3_0iiyo")

[node name="next" type="MarginContainer" parent="."]
offset_left = 883.0
offset_top = 211.0
offset_right = 1067.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="next"]
layout_mode = 2

[node name="next_hard" type="Button" parent="next/VBoxContainer"]
layout_mode = 2
tooltip_text = "Play"
theme_override_colors/font_color = Color(0.792157, 0.898039, 0.898039, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_67660")
theme_override_styles/hover = SubResource("StyleBoxFlat_jd82w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xgfd8")
icon = ExtResource("7_yu6j3")
script = ExtResource("3_0iiyo")

[node name="backward" type="MarginContainer" parent="."]
offset_left = 45.0
offset_top = 211.0
offset_right = 229.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="backward"]
layout_mode = 2

[node name="back_easy" type="Button" parent="backward/VBoxContainer"]
layout_mode = 2
tooltip_text = "Play"
theme_override_colors/font_color = Color(0.792157, 0.898039, 0.898039, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_67660")
theme_override_styles/hover = SubResource("StyleBoxFlat_jd82w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xgfd8")
icon = ExtResource("8_kum6f")
script = ExtResource("3_0iiyo")

[connection signal="pressed" from="Back/VBoxContainer/back" to="." method="_on_back_pressed" flags=18]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/medium" to="MarginContainer/VBoxContainer/medium" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/medium" to="MarginContainer/VBoxContainer/medium" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/medium" to="." method="_on_medium_pressed"]
[connection signal="mouse_entered" from="next/VBoxContainer/next_hard" to="next/VBoxContainer/next_hard" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="next/VBoxContainer/next_hard" to="next/VBoxContainer/next_hard" method="_on_mouse_exited" flags=18]
[connection signal="pressed" from="next/VBoxContainer/next_hard" to="." method="_on_next_hard_pressed"]
[connection signal="mouse_entered" from="backward/VBoxContainer/back_easy" to="backward/VBoxContainer/back_easy" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="backward/VBoxContainer/back_easy" to="backward/VBoxContainer/back_easy" method="_on_mouse_exited" flags=18]
[connection signal="pressed" from="backward/VBoxContainer/back_easy" to="." method="_on_back_easy_pressed"]
